name:                nabla
version:             0.1.0.0
synopsis:            Nabla
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  ghcjs-options:
    -dedupe
  ghc-options: -Wall -Werror
  build-depends:       base
                     , miso
                     , containers
  default-language:    Haskell2010
